Reduce spacing between items to solve issue in section sizing

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -71,16 +71,16 @@
 }
 
 .contact-section__title{
-    margin: 60px auto;
+    margin: 45px auto;
 }
 
 .contact-section span{
-    margin: 60px auto;
+    margin: 45px auto;
 }
 
 .contact-section span:nth-child(3){
     
-    margin: 60px auto;
+    margin: 45px auto;
 }
 
 .contact-section span:nth-child(3) a{
